@@ -4,4 +4,4 @@ GNU Public License v3. A copy of this license is included as "LICENSE".
 Disclaimer of warranty and limitation of liabilities as per sections 15, 16 and
 17 of above mentioned GPL v3.
 
-TAILS, OpenSSH, VLC, TorChat, OnionMail, OnionShare, Tahoe LAFS, Pond, Martus, Academic Signature, Tomb, Armory, Dropbox, SilentEye, TeamViewer, PyBitmessage, Shamir's Secret Sharing Scheme, Tor Messenger, Linux Malware Detect and Veracrypt copyrighted by their respective authors and owners. None of these are included in the "TAILS Candy" package but are downloaded on demand by their respective installer/update scripts.
+TAILS, OpenSSH, VLC, TorChat, OnionMail, OnionShare, Tahoe LAFS, Pond, Martus, Academic Signature, Tomb, Armory, Dropbox, SilentEye, TeamViewer, PyBitmessage, Shamir's Secret Sharing Scheme, Tor Messenger, Linux Malware Detect, Rootkit Hunter and Veracrypt copyrighted by their respective authors and owners. None of these are included in the "TAILS Candy" package but are downloaded on demand by their respective installer/update scripts.
